--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="apresentacao__habilidades">
 
-                <h1>Habilidades</h1>
+                <h1 class="titulo__habilidades" >Habilidades</h1>
 
                 <p class="conteudo__habilidades">Tenho habilidades em soft skills desenvolvidos com os facilidadores da Uni Matheus, em lógica de programação e em front-end pela Alura.</p>
 
