--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
             <img class="apresentacao__projetos" src="./assets/Captura de tela 2024-04-28 090539.png" alt="jogo do carro" width="250" height="350">
 
             <img class="apresentacao__projetos" src="./assets/Captura de tela 2024-04-28 090738.png" alt="ping pong" width="250" height="350">
-    
+
+             <div  class="projetos__links" >
+            <a  class="projetos__links__link"  href="https://numero-secreto-git-main-larabeatrizz1s-projects.vercel.app/" >Projeto1  </a>
+            <a  class="projetos__links__link"
+            href="https://numerosecreto2-git-main-larabeatrizz1s-projects.vercel.app/">Projeto2 </a>
+            <a  class="projetos__links__link"  href="https://catcar-git-main-larabeatrizz1s-projects.vercel.app/">Projeto3 </a>
+            <a  class="projetos__links__link" href="https://ping-pong-git-main-larabeatrizz1s-projects.vercel.app/">Projeto4 </a>
+        </div>
         </section>
 
     </main>
