--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             </div>
             
-            <img class="apresentacao__imagem" src="./assets/imagem.png.jpeg" alt="Foto da Joana Santos programando">
+            <img class="apresentacao__imagem" src="./assets/imagem.png.jpeg" alt="Foto da Lara Beatriz">
 
         </section>
 
