--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <h1 class="titulo__habilidades" >Habilidades</h1>
 
-                <p class="conteudo__habilidades">Tenho habilidades em soft skills desenvolvidos com os facilidadores da Uni Matheus, em lógica de programação e em front-end pela Alura.</p>
+                <p class="conteudo__habilidades">Tenho habilidades em soft skills desenvolvidos com os facilidadores da Uni Matheus, em lógica de programação e em HTML e CSS pela Alura.</p>
 
                 <a class= "apresentacao__certificados" href="https://cursos.alura.com.br/user/larab0751/fullCertificate/887e779b6b235d857c5f21134e251c0c">Certificados
                 </a>
